# fastapi_db_template_02_2024

./: .dockerignore  .gitignore  .ruff.toml  Dockerfile  action.yml  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  readme.md  requirements.txt
.github/workflows/: ai-code-reviewer.yml  checks-code-styles.yml  checks-pytests.yml  checks.yml  copilot_code_review.yml  main.yml
app/: main.py
app/api/v1/: dependencies.py  routers.py  tasks.py  users.py
app/config/: lifespan.py  logger_config.py  logger_setup.py  metrics_config.py  metrics_setup.py  slack_config.py  tracer_setup.py
app/db/: db.py  sqlite.db
app/migrations/: env.py
app/migrations/versions/: 20240224114734_first_iteration.py  20240224115415_second_iteration.py  20240224121726_third_iteration.py
app/models/: __init__.py  relationships.py  tasks.py  users.py
app/repositories/: tasks.py  users.py
app/schemas/: filters.py  logger_manager.py  metrics_manager.py  slack_manager.py  tasks.py  tracer_manager.py  users.py
app/services/: tasks.py  users.py
app/tests/locust/: users.py
app/tests/unit_tests/: test_endpoint_get_all_users.py
app/utils/: abstract_custom_str_enum.py  auth.py  check_otlp_credentials.py  custom_exceptions.py  filters.py  get_url_endpoint.py  repository.py  str_to_bool.py  unitofwork.py
app/utils/integrations/slack/: slack_integration.py
app/utils/logging/: abc_logger_manager.py  logger_manager.py  loguru_manager.py
app/utils/metrics/: metrics_manager.py
app/utils/tracer/: check_otlp_credentials.py  tracer_manager.py
