[tool.poetry]
name = "vandr-fastapi-db-sqs-template"
version = "2.2.0"
description = ""
authors = ["Viktor Andriichuk <v.andriichuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.27"
uvicorn = "^0.27.1"
aioboto3 = "^12.3.0"
greenlet = "^3.0.3"
ruff = "^0.3.0"
pyjwt = "^2.8.0"
mypy = "^1.8.0"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.5"
pytest = "^8.0.2"
locust = "^2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
